# open-lidar-evaluation

./: CMakeLists.txt  README.md  package.xml
cfg/: BoxParams.cfg
data/: processing.py  statsFunction.py
data/modified_lot24_validation/iris/25m/: mar_10_2026_lot24_iris_25m_test1.csv  mar_10_2026_lot24_iris_25m_test2.csv  mar_10_2026_lot24_iris_25m_test3.csv  mar_10_2026_lot24_iris_25m_test4.csv  mar_10_2026_lot24_iris_25m_test5.csv
data/modified_lot24_validation/iris/50m/: mar_10_2026_lot24_iris_50m_test1.csv  mar_10_2026_lot24_iris_50m_test2.csv  mar_10_2026_lot24_iris_50m_test3.csv  mar_10_2026_lot24_iris_50m_test4.csv  mar_10_2026_lot24_iris_50m_test5.csv
data/modified_lot24_validation/iris/75m/: mar_10_2026_lot24_iris_75m_test1.csv  mar_10_2026_lot24_iris_75m_test2.csv  mar_10_2026_lot24_iris_75m_test3.csv  mar_10_2026_lot24_iris_75m_test4.csv  mar_10_2026_lot24_iris_75m_test5.csv
data/modified_lot24_validation/ouster/25m/: mar_10_2026_lot24_ouster_25m_test1.csv  mar_10_2026_lot24_ouster_25m_test2.csv  mar_10_2026_lot24_ouster_25m_test3.csv  mar_10_2026_lot24_ouster_25m_test4.csv  mar_10_2026_lot24_ouster_25m_test5.csv
data/modified_lot24_validation/ouster/50m/: mar_10_2026_lot24_ouster_50m_test1.csv  mar_10_2026_lot24_ouster_50m_test2.csv  mar_10_2026_lot24_ouster_50m_test3.csv  mar_10_2026_lot24_ouster_50m_test4.csv  mar_10_2026_lot24_ouster_50m_test5.csv
data/modified_lot24_validation/ouster/75m/: mar_10_2026_lot24_ouster_75m_test1.csv  mar_10_2026_lot24_ouster_75m_test2.csv  mar_10_2026_lot24_ouster_75m_test3.csv  mar_10_2026_lot24_ouster_75m_test4.csv  mar_10_2026_lot24_ouster_75m_test5.csv
data/modified_lot24_validation/ruby/25m/: mar_10_2026_lot24_ruby_25m_test1.csv  mar_10_2026_lot24_ruby_25m_test2.csv  mar_10_2026_lot24_ruby_25m_test3.csv  mar_10_2026_lot24_ruby_25m_test4.csv  mar_10_2026_lot24_ruby_25m_test5.csv
data/modified_lot24_validation/ruby/50m/: mar_10_2026_lot24_ruby_50m_test1.csv  mar_10_2026_lot24_ruby_50m_test2.csv  mar_10_2026_lot24_ruby_50m_test3.csv  mar_10_2026_lot24_ruby_50m_test4.csv  mar_10_2026_lot24_ruby_50m_test5.csv
data/modified_lot24_validation/ruby/75m/: mar_10_2026_lot24_ruby_75m_test1.csv  mar_10_2026_lot24_ruby_75m_test2.csv  mar_10_2026_lot24_ruby_75m_test3.csv  mar_10_2026_lot24_ruby_75m_test4.csv  mar_10_2026_lot24_ruby_75m_test5.csv
data/modified_lot24_validation/velodyne/25m/: mar_10_2026_lot24_velodyne_25m_test1.csv  mar_10_2026_lot24_velodyne_25m_test2.csv  mar_10_2026_lot24_velodyne_25m_test3.csv  mar_10_2026_lot24_velodyne_25m_test4.csv  mar_10_2026_lot24_velodyne_25m_test5.csv
launch/: iris_repeatability.launch  iris_tuning.launch  ouster_repeatability.launch  ouster_tuning.launch  ruby_repeatability.launch  ruby_tuning.launch  velodyne_repeatability.launch  velodyne_tuning.launch
post_collection_analysis/: processing.py  statsFunction.py
repeatability_processing/: CMakeLists.txt
repeatability_processing/launch/: extractPoints.launch
repeatability_processing/src/: pcl_box_filter.cpp  target_processor.py
rviz/: iris.rviz  ouster.rviz  ruby.rviz  velodyne.rviz
src/: dynamic_param_box_filter.cpp  pcl_box_filter.cpp  target_processor.py  temp_intensity.txt
(+117 files in other folders)
